sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:4: error: forward reference extends over definition of variable end
  var end=len-2
          ^AlgCocktailSort2:4: error: forward reference extends over definition of variable k
  var end=len-2
          ^AlgCocktailSort2:4: error: forward reference extends over definition of variable j
  var end=len-2
          ^AlgCocktailSort2:4: error: forward reference extends over definition of value len
  var end=len-2
          ^